--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 #container{
     display: flex;
     flex-wrap: wrap;
-   
+    width: 500px;
+    height: 500px;
+    border: 2px solid red;
 }
 
 .header {
@@ -18,7 +20,5 @@ button{
 
 .divSquares{
     border: 1px solid black;
-    width: 30px;
-    height: 30px;
     box-sizing: border-box;
 }
